--- a/style.css
+++ b/style.css
@@ -1,64 +1,110 @@
-body {
-    background-color: #1e1e1e;
-    color: #fff;
-    font-family: Verdana, sans-serif;
+/* Reset default margin and padding for all elements */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+
+/* Apply some basic styling to the body */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #383838;
+    margin: 0;
+    padding: 20px;
+}
+
+
+/* Style the header */
+header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 
 h1 {
-    text-align: center;
-    padding: 22px;
-    color: #ADD8E6;
+    font-size: 24px;
+    color: #ff0000;
 }
+
+
 .instructions {
-    text-align: center; /* Center-align the text */
-    font-size: 14px; /* Adjust the font size */
-    color: #fff; /* Set the color to match the header */
-    font-weight: bold;
-    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    margin-top: 10px;
+    color: #ffffff;
 }
 
-form {
-    background-color: #333;
+
+/* Style the form container */
+#prediction-form {
+    background-color: #4960a0;
+    border-radius: 5px;
     padding: 20px;
-    border-radius: 10px;
-    max-width: 400px;
-    margin: 0 auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-label, select, input, button {
-    display: block;
-    margin: 10px 0;
+
+/* Style form groups */
+.form-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
+
+.form-group {
+    flex: 1;
+    margin-right: 10px;
+}
+
+
+/* Style labels */
 label {
     font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+    color: #ffffff;
 }
 
-select, input {
+
+/* Style form controls */
+input[type="number"],
+input[type="range"],
+select,
+input[type="radio"] {
     width: 100%;
-    max-width: 100%;
-    box-sizing: border-box;
-    padding: 10px;
-    border: none;
-    background-color: #555;
-    color: #fff;
-    border-radius: 5px;
+    padding: 5px;
+    margin: 5px 0;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: #333;
 }
 
+
+/* Style the Predict button */
 button {
-    background-color: #0056b3;
+    background-color: #ff0000;
     color: #fff;
+    padding: 10px 20px;
     border: none;
-    padding: 10px;
     cursor: pointer;
+    font-size: 16px;
     border-radius: 5px;
+    margin-top: 10px;
 }
+
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #ff8800;
 }
 
+
+/* Style the result container */
 #result {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
     margin-top: 20px;
-    text-align: center;
+    color: #333;
 }
